# ThirdParty-algorithm_rv1126

./: .gitignore  LICENSE  README.md  README_CN.md
faceRecognition_ArcSoft/demo/: CMakeLists.txt  build.sh
faceRecognition_ArcSoft/demo/config/: run.sh
faceRecognition_ArcSoft/demo/include/: arcsoft_face_sdk.h  merror.h
faceRecognition_ArcSoft/demo/src/: samplecode.cpp
faceRecognition_MEGVII/demo/: CMakeLists.txt  build.sh  model.yaml
faceRecognition_MEGVII/demo/config/: run.sh
faceRecognition_MEGVII/demo/include/: argparse.h  config.h  face_common.h  face_sdk.h  shared_quene.h  tool.h
faceRecognition_MEGVII/demo/src/: CMakeLists.txt  argparse.cpp  config.cpp  tool.cpp
faceRecognition_MEGVII/demo/time_test/: CMakeLists.txt  time_test.cpp
faceRecognition_MEGVII/demo/toolchains/: arm-linux-gnueabihf.toolchain.cmake
ocr_xinhuokj/demo/: CMakeLists.txt  build.sh
ocr_xinhuokj/demo/config/: run.sh
ocr_xinhuokj/demo/include/: camera.h  scan_pen.h  scan_pen_c.h
ocr_xinhuokj/demo/src/: test.cpp
ocr_xinhuokj/sdk/: Releasenote.md
ocr_xinhuokj/sdk/include/: scan_pen.h  scan_pen_c.h
